Fix spacing

--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -44,10 +44,10 @@
 
 .video
 	position: relative 
-    padding-bottom: 0% 
+    padding-bottom: 10% 
 	iframe
-        position: relative 
-        display: flex 
-        margin: auto 
-		width: 960px 
-		height: 540px 
+        position: relative
+        display: flex
+        margin: auto
+        width: 960px
+        height: 540px
